# Tarnow1000YearsOfModernity

./: CMakeLists.txt  LaunchScreen.storyboard  Main.qml  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
components/: Style.qml
ios/: Info.cmake.ios.plist  LaunchScreen.storyboard
ios/Resources.xcassets/BWA_STOPKA loga NOR.imageset/: Contents.json
ios/Resources.xcassets/BWA_tarnow.imageset/: Contents.json
ios/Resources.xcassets/Tarnow 1000 lat_logo.imageset/: Contents.json
json/: context.json  routes.json
screens/: AboutAppScreen.qml  AuthorsScreen.qml  DagaramaScreen.qml  HomeScreen.qml  InitialScreen.qml  LicensesScreen.qml  LocationDetailsScreen.qml  LocationsScreen.qml  MapScreen.qml  RouteDetailsScreen.qml  RoutesScreen.qml  SettingsScreen.qml  TarnowScreen.qml
